--- a/app/src/main/res/drawable/btn_light.xml
+++ b/app/src/main/res/drawable/btn_light.xml
@@ -2,4 +2,8 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#efefef"/>
+    <stroke
+        android:width="3dp"
+        android:color="@color/white"
+        />
 </shape>
